# ChangeLog for sys-boot/grub
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/ChangeLog,v 1.192 2012/03/20 14:16:29 floppym Exp $

*grub-2.00_beta2-r1 (20 Mar 2012)

  20 Mar 2012; Mike Gilbert <floppym@gentoo.org> +grub-2.00_beta2-r1.ebuild:
  Fix sort order of kernels in grub2-mkconfig. Bug 408195.

  18 Mar 2012; Mike Gilbert <floppym@gentoo.org> grub-2.00_beta2.ebuild,
  grub-9999.ebuild:
  Pass -Os in TARGET_CFLAGS for efi-64 on x86. Don't clobber TARGET variables in
  case the user wants to play with them. Set CTARGET to pass --target option to
  configure.

  17 Mar 2012; Mike Gilbert <floppym@gentoo.org> grub-9999.ebuild:
  Sync live ebuild.

  17 Mar 2012; Mike Gilbert <floppym@gentoo.org> grub-2.00_beta2.ebuild:
  Enable building x86_64-efi target on an x86 host. Bug 408545.

*grub-2.00_beta2 (11 Mar 2012)

  11 Mar 2012; Mike Gilbert <floppym@gentoo.org> +grub-2.00_beta2.ebuild:
  Version bump.

  08 Mar 2012; Mike Gilbert <floppym@gentoo.org> grub-2.00_beta1.ebuild,
  grub-9999.ebuild:
  Simplify efi-32/64 logic a bit.

*grub-2.00_beta1 (07 Mar 2012)

  07 Mar 2012; Mike Gilbert <floppym@gentoo.org> +grub-2.00_beta1.ebuild:
  Version bump.

  06 Mar 2012; Mike Gilbert <floppym@gentoo.org> grub-2.00_beta0.ebuild,
  grub-9999.ebuild:
  Add runtime dep on efibootmgr for efi platforms.

  06 Mar 2012; Mike Gilbert <floppym@gentoo.org> grub-2.00_beta0.ebuild,
  grub-9999.ebuild:
  Don't use the platform to tranform the utility names; it's pointless. Users
  may need to specify the --target option if grub2-install fails to auto-detect
  it.

  04 Mar 2012; Mike Gilbert <floppym@gentoo.org> grub-2.00_beta0.ebuild,
  grub-9999.ebuild:
  Dont mess with grub.texi; this is causing the live ebuild to not generate any
  info page at all.

  29 Feb 2012; Mike Gilbert <floppym@gentoo.org> grub-0.92-r1.ebuild,
  grub-0.94-r1.ebuild, grub-0.96-r1.ebuild, grub-0.96-r2.ebuild,