@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/grub-9999.ebuild,v 1.59 2012/03/18 06:41:10 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/grub-9999.ebuild,v 1.60 2012/03/24 04:22:46 floppym Exp $
 
 EAPI=4
 
@@ -265,5 +265,5 @@ src_install() {
 pkg_postinst() {
 	# display the link to guide
 	elog "For information on how to configure grub-2 please refer to the guide:"
-	elog "    http://wiki.gentoo.org/wiki/GRUB2"
+	elog "    http://wiki.gentoo.org/wiki/GRUB2_Quick_Start"
 }
